college-backend-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-sql
  namespace: gateway-ns
spec:
  replicas: 3
  minReadySeconds: 10
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: my-sql
  template:
    metadata:
      labels:
        app: my-sql
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: my-sql
          image: mariadb:latest
          ports:
            - containerPort: 3306
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          volumeMounts:
            - name: mariadb-storage
              mountPath: /var/lib/mysql
            - name: config-volume
              mountPath: /docker-entrypoint-initdb.d
  volumeClaimTemplates:
  - metadata: mariadb-storage
      name: 
    spec:
      accessModes: [ "ReadWriteMany" ]
      resources:
        requests:
          storage: 2Gi
      storageClassName: my-storage-class
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: gateway-ns
spec:
  selector:
    app: my-sql
  ports:
    - port: 3306
      targetPort: 3306
  clusterIP: None
