college-deployment .yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: college-deploy
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: college
  template:
    metadata:
      labels: 
        app: college
    spec:
      containers:
      - name: college-cont
        image: ashutosh4782/duniversity-college-portal-backend:latest
        
        ports:
        - containerPort: 3000

        
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata: 
  name: college-svc
spec:
  selector: 
    app: college
  ports:
    - port: 3001
      targetPort: 3000
      protocol: TCP
  type: NodePort
