routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: duniversity-http-route
  namespace: gateway-ns
spec:
  parentRefs:
    - name: my-gateway
      namespace: gateway-ns
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: duniversity-service
          namespace: gateway-ns
          port: 80
